refactor: use immutable collection factory methods